reviewed: eclipse.platform