@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2019 IBM Corporation and others.
+ * Copyright (c) 2000, 2022 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -120,25 +120,34 @@ public class AntLaunchDelegate extends LaunchConfigurationDelegate {
 	@Override
 	public void launch(ILaunchConfiguration configuration, String mode, ILaunch launch, IProgressMonitor monitor) throws CoreException {
 		String path = configuration.getAttribute(IJavaLaunchConfigurationConstants.ATTR_JRE_CONTAINER_PATH, new String("")); //$NON-NLS-1$
+		String vmver = null;
 		if (!path.isEmpty()) {
 			IPath jrePath = Path.fromPortableString(path);
 			IVMInstall vm = JavaRuntime.getVMInstall(jrePath);
 			if (vm instanceof AbstractVMInstall) {
 				AbstractVMInstall install = (AbstractVMInstall) vm;
-				String vmver = install.getJavaVersion();
+				vmver = install.getJavaVersion();
 				// versionToJdkLevel only handles 3 char versions = 1.5, 1.6, 1.9, etc
 				if (vmver.length() > 3) {
 					vmver = vmver.substring(0, 3);
 				}
 				// int ver = (int) (CompilerOptions.versionToJdkLevel(vmver) >>> 16);
-				if (JavaCore.compareJavaVersions(vmver, JavaCore.VERSION_1_8) < 0) {
+				if (JavaCore.compareJavaVersions(vmver, JavaCore.VERSION_11) < 0) {
 					boolean useDefault = configuration.getAttribute(IJavaLaunchConfigurationConstants.ATTR_DEFAULT_CLASSPATH, true);
-					if (useDefault) { // Java 1.7 and above is required if Default Ant Home is used
+					if (useDefault) {
 						IStatus status = new Status(IStatus.ERROR, AntLaunching.PLUGIN_ID, 1, AntLaunchConfigurationMessages.AntLaunchDelegate_Launching__0__2, null);
 						throw new CoreException(status);
 					}
 				}
 			}
+		}
+		if (vmver == null) {
+			IVMInstall vm = JavaRuntime.getDefaultVMInstall();
+			if (vm instanceof AbstractVMInstall) {
+				AbstractVMInstall install = (AbstractVMInstall) vm;
+				vmver = install.getJavaVersion();
+			}
+
 		}
 		if (monitor.isCanceled()) {
 			return;
@@ -243,7 +252,7 @@ public class AntLaunchDelegate extends LaunchConfigurationDelegate {
 			}
 		}
 
-		StringBuffer commandLine = generateCommandLine(location, arguments, userProperties, propertyFiles, targets, antHome, basedir, isSeparateJRE, captureOutput, setInputHandler);
+		StringBuffer commandLine = generateCommandLine(location, arguments, userProperties, propertyFiles, targets, antHome, basedir, isSeparateJRE, captureOutput, setInputHandler, vmver);
 
 		if (isSeparateJRE) {
 			monitor.beginTask(MessageFormat.format(AntLaunchConfigurationMessages.AntLaunchDelegate_Launching__0__1, new Object[] {
@@ -376,7 +385,7 @@ public class AntLaunchDelegate extends LaunchConfigurationDelegate {
 		}
 	}
 
-	private StringBuffer generateCommandLine(IPath location, String[] arguments, Map<String, String> userProperties, String[] propertyFiles, String[] targets, String antHome, String basedir, boolean separateVM, boolean captureOutput, boolean setInputHandler) {
+	private StringBuffer generateCommandLine(IPath location, String[] arguments, Map<String, String> userProperties, String[] propertyFiles, String[] targets, String antHome, String basedir, boolean separateVM, boolean captureOutput, boolean setInputHandler, String vmver) {
 		StringBuffer commandLine = new StringBuffer();
 
 		if (!separateVM) {
@@ -448,6 +457,10 @@ public class AntLaunchDelegate extends LaunchConfigurationDelegate {
 			commandLine.append(" \"-Dant.home="); //$NON-NLS-1$
 			commandLine.append(antHome);
 			commandLine.append('\"');
+		}
+		if (vmver != null && JavaCore.compareJavaVersions(vmver, JavaCore.VERSION_17) >= 0
+				&& commandLine.indexOf("-Djava.security.manager=allow") == -1) { //$NON-NLS-1$
+			commandLine.append(" \"-Djava.security.manager=allow\""); //$NON-NLS-1$
 		}
 
 		if (separateVM) {
